--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,23 +3,186 @@
 @import 'bootstrap/scss/bootstrap';
 @import "@fortawesome/fontawesome-free/css/all.css";
 
-/* centering the navbar text */
-nav .navbar-brand {
+/*
+ * stylesheet starts here
+ */
+
+// align the navbar brand to center
+.navbar-brand {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-nav .nav-item {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-weight: 500;
-    text-transform: uppercase;
+::after,
+::before {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-nav .nav-item:hover {
-    background: $primary;
-    color: $body-bg !important;
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
+h1 {
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+/* sidebar */
+.wrapper {
+    display: flex;
+}
+
+.main {
+    min-height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    transition: all 0.35s ease-in-out;
+}
+
+#sidebar {
+    width: 60px;
+    min-width: 70px;
+    z-index: 1000;
+    transition: all .25s ease-in-out;
+    display: flex;
+    flex-direction: column;
+}
+
+#sidebar.expand {
+    width: 250px;
+    min-width: 250px;
+}
+
+@media (max-width: 800px) {
+
+    #sidebar {
+        transition: none;
+    }
+
+    #sidebar.expand {
+        width: 250px;
+        min-width: 250px;
+        height: 100%; 
+        position: absolute; 
+        transition: all .25s ease-in-out;
+    }
+}
+
+.toggle-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    cursor: pointer;
+    border: 0;
+    color: #484848;
+    transition: transform 0.3s ease;
+}
+
+.toggle-btn i {
+    font-size: 1.5rem;
+}
+
+#sidebar:not(.expand) a.sidebar-link span {
+    display: none;
+}
+
+.sidebar-nav {
+    padding: 1rem 0;
+    flex: 1 1 auto;
+}
+
+a.sidebar-link {
+    padding: .625rem 1.625rem;
+    color: #212121;
+    display: block;
+    white-space: nowrap;
+    border-left: 3px solid transparent;
+}
+
+.sidebar-link i {
+    font-size: 0.8rem;
+    color: #484848;
+    margin-right: .75rem;
+    transition: all 0.35s ease-in-out;
+}
+
+a.sidebar-link:hover, li.sidebar-item.active, a.sidebar-link.active {
+    background-color: rgba(2, 2, 2, 0.075);
+    border-left: 3px solid #484848;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    transition: all 0.35s ease-in-out;
+}
+
+.sidebar-item {
+    position: relative;
+}
+
+#sidebar:not(.expand) .sidebar-item .sidebar-dropdown {
+    position: absolute;
+    top: 0;
+    left: 70px;
+    background-color: #fff;
+    padding: 0;
+    min-width: 15rem;
+    display: none;
+}
+
+#sidebar:not(.expand) .sidebar-item:hover .has-dropdown+.sidebar-dropdown {
+    display: block;
+    max-height: 15em;
+    width: 100%;
+    opacity: 1;
+}
+
+#sidebar.expand .sidebar-link[data-bs-toggle="collapse"]::after {
+    border: solid;
+    border-width: 0 .075rem .075rem 0;
+    content: "";
+    display: inline-block;
+    padding: 2px;
+    position: absolute;
+    right: 1.5rem;
+    top: 1.4rem;
+    transform: rotate(-135deg);
+    transition: all .2s ease-out;
+}
+
+#sidebar.expand .sidebar-link[data-bs-toggle="collapse"].collapsed::after {
+    transform: rotate(45deg);
+    transition: all .2s ease-out;
+}
+
+/* for hamburger menu */
+.rotate-vertical {
+    transform: rotate(90deg);
+    transform-origin: center;
+    transition: transform 0.3s ease;
+}
+
+
+/* action button */
+.fab {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    transition: all 0.3s ease-in-out;
+}
+
+.fab:hover {
+    transition: all 0.3s ease-in-out;
 }
