--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -56,8 +56,8 @@ h1 {
 }
 
 #sidebar.expand {
-    width: 250px;
-    min-width: 250px;
+    width: 260px;
+    min-width: 260px;
 }
 
 @media (max-width: 800px) {
@@ -101,7 +101,7 @@ h1 {
 
 a.sidebar-link {
     padding: .625rem 1.625rem;
-    color: #212121;
+    color: #000;
     display: block;
     white-space: nowrap;
     border-left: 3px solid transparent;
@@ -115,8 +115,8 @@ a.sidebar-link {
 }
 
 a.sidebar-link:hover, li.sidebar-item.active, a.sidebar-link.active {
-    background-color: rgba(2, 2, 2, 0.075);
-    border-left: 3px solid #484848;
+    background-color: #4286f436;
+    border-left: 3px solid #4285f4;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     transition: all 0.35s ease-in-out;
