--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,16 +2,16 @@
 $body-bg: white;
 
 // Typography
-$font-family-sans-serif:  "Source Code Pro", monospace;
+$font-family-sans-serif: "Source Code Pro", monospace;
 $font-size-base: 1rem;
 $line-height-base: 1.6;
 
 $primary: #4285f4;
 $danger: #ff4136;
-$no-name: #F7EFE5;
-$no-name-: #C3ACD0;
+$no-name: #f7efe5;
+$no-name-: #c3acd0;
 
 $theme-colors: (
-  "primary": $primary,
-  "danger": $danger
+    "primary": $primary,
+    "danger": $danger,
 );
