--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -1,1 +1,13 @@
 // Here you can add other styles
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    padding-top: 3%;
+    z-index: 999;
+}
