--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -5,6 +5,8 @@
 @import '@coreui/coreui/scss/coreui';
 @import '@coreui/chartjs/scss/coreui-chartjs';
 
+@import 'simplebar-react/dist/simplebar.min.css';
+
 // Vendors
 @import 'vendors/simplebar';
 
