--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -11,3 +11,22 @@
     padding-top: 3%;
     z-index: 999;
 }
+
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #212631;
+}
+
+::-webkit-scrollbar-thumb {
+    border: none;
+    background-color: #323a49;
+    border-radius: 0.2em;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #323a49;
+}
