--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -43,3 +43,46 @@
     width: auto;
     object-fit: cover;
 }
+
+
+.timeline {
+    position: relative;
+    padding: 20px;
+    max-width: 600px;
+    margin: auto;
+    border-left: 2px solid #3498db;
+}
+
+.timeline-event {
+    position: relative;
+}
+
+.timeline-event::before {
+    content: '';
+    position: absolute;
+    left: -3px;
+    top: 5px;
+    height: 10px;
+    width: 10px;
+    background-color: #3498db;
+    border-radius: 50%;
+}
+
+.timeline-date {
+    font-weight: bold;
+    padding-left: 16px;
+    color: #3498db;
+}
+
+.timeline-content {
+    margin-left: 7px;
+    padding: 10px;
+}
+
+.timeline-content h3 {
+    margin: 0;
+}
+
+.timeline-content p {
+    margin: 5px 0 0;
+}
