improve qrcode ui in freight & can now scan qrcode from tracking page

--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -3,3 +3,6 @@
 // If you want to customize your project please add your variables below.
 
 $enable-deprecation-messages: false !default;
+
+$modal-header-border-width: 0px;
+$modal-footer-border-width: 0px;
