added service workers and improvements

--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -125,7 +125,7 @@
 
 .landing-page {
     position: relative;
-    background-image: url(/images/freight-sea.jpg); 
+    // background-image: url(/images/freight-land.jpg); 
     background-size: cover;
     background-position: center;
     height: 100vh;
