--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -1,7 +1,9 @@
 // Variable overrides
 //
 // If you want to customize your project please add your variables below.
+@import '@fontsource/poppins';
 
+$font-family-sans-serif: 'Poppins';
 $enable-deprecation-messages: false !default;
 
 $modal-header-border-width: 0px;
