--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -40,7 +40,7 @@
  * image for freight
  */
 .image-container {
-    height: auto;
+    height: 555px;
     display: flex;
     align-items: stretch;
 }
