bug fixes and improvements

--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -162,3 +162,14 @@
 .blurred {
     filter: blur(5px);
   }
+
+  .my-masonry-grid {
+    display: flex;
+    margin-left: -15px; 
+    width: auto;
+  }
+  
+  .my-masonry-grid_column {
+    padding-left: 14px;
+    background-clip: padding-box;
+  }
