bug fixes and improvements

--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import '@coreui/chartjs/scss/coreui-chartjs';
 
 @import 'simplebar-react/dist/simplebar.min.css';
+@import 'aos/dist/aos.css';
 
 // Vendors
 @import 'vendors/simplebar';
