who would want some toast?

--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -173,3 +173,8 @@
     padding-left: 14px;
     background-clip: padding-box;
 }
+
+.p-navbar {
+    -webkit-backdrop-filter: blur(3px);
+    backdrop-filter: blur(3px);
+}
