refractor code, minor bug fixes and improvements & added prometheus

--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -128,7 +128,7 @@
  */
 .landing-page {
     position: relative;
-    // background-image: url(/images/freight-land.jpg); 
+    background: #000;
     background-size: cover;
     background-position: center;
     height: 100vh;
