--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -8,6 +8,7 @@
 
 @import 'simplebar-react/dist/simplebar.min.css';
 @import 'aos/dist/aos.css';
+@import 'react-big-calendar/lib/sass/styles';
 
 // Vendors
 @import 'vendors/simplebar';
