--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -59,7 +59,7 @@
     padding: 20px;
     max-width: 600px;
     margin: auto;
-    border-left: 2px solid #3498db;
+    border-left: 2px solid rgba(98, 97, 204);
 }
 
 .timeline-event {
@@ -73,31 +73,12 @@
     top: 5px;
     height: 10px;
     width: 10px;
-    background-color: #3498db;
+    background-color: rgba(98, 97, 204);
     border-radius: 50%;
 }
 
-.timeline-date {
-    font-weight: bold;
-    padding-left: 16px;
-    color: #3498db;
-}
-
-.timeline-content {
-    margin-left: 7px;
-    padding: 10px;
-}
-
-.timeline-content h3 {
-    margin: 0;
-}
-
-.timeline-content p {
-    margin: 5px 0 0;
-}
-
 /*
- * OTP that an O with TP
+ * OTP thats an O with TP
  */
 .otp-input {
     width: 40px;
