--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -158,3 +158,9 @@
     -webkit-backdrop-filter: blur(3px);
     backdrop-filter: blur(3px);
 }
+
+.table-header-cell-no-wrap {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
