schedules now works

--- a/client/src/scss/_calendar.scss
+++ b/client/src/scss/_calendar.scss
@@ -15,7 +15,7 @@ $date-selection-bg-color: rgba(0, 0, 0, 0.1);
 $event-bg: #3174ad;
 $event-border: darken(#3174ad, 10%);
 $event-outline: #3b99fc;
-$event-color: #3b99fc;
+$event-color: #fff;
 $event-border-radius: 5px;
 $event-padding: 2px 5px;
 $event-zindex: 4;
