--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -174,3 +174,36 @@
 .card:hover {
     box-shadow: 0 4px 8px rgba(66, 133, 244, 0.1);
 }
+
+/*
+ * calendar
+ */
+.rbc-off-range-bg {
+    background-color: rgb(50, 58, 73) !important;
+}
+
+.rbc-off-range-bg,
+.rbc-today {
+    border-radius: 10px !important;
+    margin: 1px;
+}
+
+.rbc-toolbar button:active,
+.rbc-toolbar button.rbc-active {
+    background-color: #4285f4 !important;
+    color: white !important;
+    font-weight: 600 !important;
+}
+
+.rbc-toolbar button {
+    background-color: #6d7d9c !important;
+    color: #fff !important;
+    border: none !important;
+}
+
+.rbc-month-view,
+.rbc-month-row,
+.rbc-day-bg+.rbc-day-bg,
+.rbc-header {
+    border: none !important;
+}
