--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -171,7 +171,7 @@
     width: calc(100% / 7);
 }
 
-.card:hover {
+.card:hover, .list-group-item:hover {
     box-shadow: 0 4px 8px rgba(66, 133, 244, 0.1);
 }
 
