--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -24,7 +24,7 @@
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #212631;
+    background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
