--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -97,12 +97,12 @@
     background-image: url(/images/background.png);
     background-size: cover;
     background-position: center;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    opacity: 0.2;
+    opacity: 0.3;
 }
 
 /*
