replace bg, added refund, change legal on non loginn user to root, and remove unused images

--- a/client/src/scss/_custom.scss
+++ b/client/src/scss/_custom.scss
@@ -94,7 +94,7 @@
  * auth background
  */
 .auth-bg {
-    background-image: url(/images/background.png);
+    background-image: url('https://axleshift-core1.s3.eu-north-1.amazonaws.com/images/axleshift.png');
     background-size: cover;
     background-position: center;
     position: fixed;
