--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -7,6 +7,9 @@
 @import 'simplebar-react/dist/simplebar.min.css';
 @import 'aos/dist/aos.css';
 
+@import 'react-date-range/dist/styles.css';
+@import 'react-date-range/dist/theme/default.css';
+
 @import 'theme';
 
 @import 'custom';
